--- a/com.xiyuansoft.DataBaseUpdate/com.xiyuansoft.DataBaseUpdate.csproj
+++ b/com.xiyuansoft.DataBaseUpdate/com.xiyuansoft.DataBaseUpdate.csproj
@@ -1,16 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{09A6BA8F-03C1-4093-A7E6-3A3C372B6A6D}</ProjectGuid>
+    <ProjectGuid>{F2E16C78-CB0A-409B-AB64-693BD59EA046}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>com.xiyuansoft.bormodel</RootNamespace>
-    <AssemblyName>com.xiyuansoft.bormodel</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <RootNamespace>com.xiyuansoft.DataBaseUpdate</RootNamespace>
+    <AssemblyName>com.xiyuansoft.DataBaseUpdate</AssemblyName>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -25,9 +24,9 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>none</DebugType>
+    <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\..\Release\</OutputPath>
+    <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -43,26 +42,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseModel.cs" />
-    <Compile Include="BizPars.cs" />
-    <Compile Include="commdata\CommList.cs" />
-    <Compile Include="commdata\CommListType.cs" />
-    <Compile Include="IFinalHandler.cs" />
-    <Compile Include="IInitData.cs" />
-    <Compile Include="ITestData.cs" />
-    <Compile Include="KBoModel.cs" />
-    <Compile Include="KBoModelExt.cs" />
-    <Compile Include="kmodelExt\KMExtField.cs" />
-    <Compile Include="kmodelExt\KMExtTable.cs" />
-    <Compile Include="Map.cs" />
-    <Compile Include="metadata\Field.cs" />
-    <Compile Include="metadata\Table.cs" />
+    <Compile Include="DbUpdateManager.cs" />
+    <Compile Include="ISimpleUpdater.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tree.cs" />
-    <Compile Include="TreeQueryHelper.cs" />
+    <Compile Include="UpdateNode.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\xyDb\com.xiyuansoft.DataBasePro\com.xiyuansoft.DataBasePro.csproj">
+    <ProjectReference Include="..\..\biz\com.xiyuansoft.bormodel\com.xiyuansoft.bormodel.csproj">
+      <Project>{09a6ba8f-03c1-4093-a7e6-3a3c372b6a6d}</Project>
+      <Name>com.xiyuansoft.bormodel</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\com.xiyuansoft.DataBasePro\com.xiyuansoft.DataBasePro.csproj">
       <Project>{cf557008-f817-4caf-8668-17fd10065724}</Project>
       <Name>com.xiyuansoft.DataBasePro</Name>
     </ProjectReference>
